ansible/playbooks/files/k8s-manifests/bookinfo-am/issueGenerators/no-reviews-v3-500.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews-v3
  namespace: bookinfo
  labels:
    app: reviews
    version: v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews
  template:
    metadata:
      labels:
        app: reviews
        version: v3
    spec:
      containers:
        - name: reviews
          image: nrjpoddar/bookinfo:examples-bookinfo-reviews-v3-version-header
          imagePullPolicy: Always
          ports:
            - containerPort: 9080
