ansible/playbooks/files/k8s-manifests/bookinfo-am/issueGenerators/2.ratings-slowdown-vs.yaml
##################################################################################################
# Ratings Slow-Down Rule
##################################################################################################
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings-delay
  namespace: bookinfo
spec:
  hosts:
    - ratings.bookinfo.svc.cluster.local
  http:
    - fault:
        delay:
          percentage:
            value: 100
          fixedDelay: 500ms
      route:
        - destination:
            host: ratings.bookinfo.svc.cluster.local
---
