ansible/playbooks/files/k8s-manifests/bookinfo-am/issueGenerators/3.reviews-v1-500.yaml
##################################################################################################
# Ratings Slow-Down Rule
##################################################################################################
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews-v1-500
  namespace: bookinfo
spec:
  hosts:
    - reviews.bookinfo.svc.cluster.local
  http:
    - fault:
        abort:
          percentage:
            value: 100
          httpStatus: 500
      route:
        - destination:
            host: reviews.bookinfo.svc.cluster.local
---
